add_product_form_redesign

--- a/views/users/view_products.hbs
+++ b/views/users/view_products.hbs
@@ -8,7 +8,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{this.Name}}</h5>
                         <p class="card-text">₹{{this.Price}}</p>
-                        <p class="card-text">{{this.Description}}</p>
+                       <!-- <p class="card-text">{{this.Description}}</p> -->
                         {{!-- <a href="/add_to_cart?id={{this._id}}" class="btn btn-primary">Add to cart</a> --}}
                         <button class="btn btn-primary" onclick="add_to_cart('{{this._id}}')">Add To Cart</button>
                     </div>
