--- a/views/admin/add_product.hbs
+++ b/views/admin/add_product.hbs
@@ -8,7 +8,7 @@
                 <label for="">Category</label>
                 <input type="text" name="Category" class="form-control">
                 <label for="">Description</label>
-                <input type="text" name="Description" class="form-control">
+                <textarea type="text" name="Description" class="form-control" cols="10" rows="13"></textarea>
                 <label for="">Price</label>
                 <input type="number" min="0" max="999999999999" name="Price" class="form-control">
                 <label for="">Image</label>
