--- a/views/users/view_products.hbs
+++ b/views/users/view_products.hbs
@@ -4,7 +4,9 @@
             {{#each products}}
             <div class="col-md-3 ">
                 <div class="card " style="width: 15rem; height: 26rem;">
+                    <a href="https://www.google.com/" target="_blank">
                     <img src="/product_images/{{this._id}}.jpg" class="card-img-top" alt="...">
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title">{{this.Name}}</h5>
                         <p class="card-text">₹{{this.Price}}</p>
