--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,4 +1,5 @@
-<div class="container-fluid">
+<section class="">
+  <div class="container-fluid">
   <div class="row" style="justify-content: center;">
     <div class="col-md-8  bg-gradient bg-secondary mt-2 text-white rounded shadow">
       <form action="/login" method="post">
@@ -25,3 +26,4 @@
     </div>
   </div>
 </div>
+</section>
