--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,29 +1,75 @@
-<section class="">
-  <div class="container-fluid">
-  <div class="row" style="justify-content: center;">
-    <div class="col-md-8  bg-gradient bg-secondary mt-2 text-white rounded shadow">
-      <form action="/login" method="post">
-        <h1 style="text-align: center;">Login</h1>
-        {{#if loginErr}}
-        <p class="error" style="color:red;">! {{loginErr}}</p>
-        {{/if}}
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" required="required" class="form-control" id="exampleInputEmail1"
-            aria-describedby="emailHelp" placeholder="Enter email" name="Email" />
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <img
+      class="mx-auto h-10 w-auto"
+      src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+      alt="Your Company"
+    />
+    <h2
+      class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
+    >Sign in to your account</h2>
+  </div>
+  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+    <form class="space-y-6" action="/login" method="POST">
+      {{#if loginErr}}
+    <p class="error" style="color:red;">! {{loginErr}}</p>
+  {{/if}}
+      <div>
+        <label
+          for="Email"
+          class="block text-sm font-medium leading-6 text-gray-900"
+        >Email address</label>
+        <div class="mt-2">
+          <input
+            id="email"
+            name="Email"
+            type="email"
+            autocomplete="email"
+            required
+            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" required="required" class="form-control" id="exampleInputPassword1"
-            placeholder="Password" name="Password" />
+      </div>
+
+      <div>
+        <div class="flex items-center justify-between">
+          <label
+            for="Password"
+            class="block text-sm font-medium leading-6 text-gray-900"
+          >Password</label>
+          <div class="text-sm">
+            <a
+              href="#"
+              class="font-semibold text-indigo-600 hover:text-indigo-500"
+            >Forgot password?</a>
+          </div>
         </div>
-        <div class="form-group form-check">
-          <br />
-          <a href="/signup" style="">Create a new account?</a>
+        <div class="mt-2">
+          <input
+            id="password"
+            name="Password"
+            type="password"
+            autocomplete="current-password"
+            required
+            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
+      </div>
+
+      <div>
+        <button
+          type="submit"
+          class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+        >Log in</button>
+      </div>
+    </form>
+
+    <p class="mt-10 text-center text-sm text-gray-500">
+      Not a user?
+      <a
+        href="/signup"
+        class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500"
+      >Sign Up</a>
+    </p>
   </div>
 </div>
-</section>
