updated banner design

--- a/views/partials/user_header.hbs
+++ b/views/partials/user_header.hbs
@@ -23,6 +23,7 @@
               <a class="nav-link active" href="/orders">Orders</a>
             </li>
           {{/if}}
+          <li><a href="/test">test</a></li>
 
         </ul>
                 <div class="btn-group dropstart">
