--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -1,3 +1,4 @@
+<section>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
   function change_quantity(cart_id, product_id, user_id, count) {
@@ -31,40 +32,103 @@
   }
 
 </script>
-<section>
-  <div class="container">
-    <table class="table mt-5">
-      <thead>
-        <tr>
-          <th scope="col">Item</th>
-          <th scope="col">Title</th>
-          <th scope="col">Price</th>
-          <th scope="col">Quantity</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        {{#each user_cart}}
-        <tr>
-          <td><img src="/product_images/{{this.product._id}}.jpg" style="width:70px; height:70px" /></td>
-          <td>{{this.product.Name}}</td>
-          <td>{{this.product.Price}}</td>
-          <td><button class="btn btn-outline-danger"
+<section class="h-100 h-custom " style="background-color: white">
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12">
+              <div class="card card-registration card-registration-2 " style="border-radius 15px;">
+                <div class="card-body p-0">
+                  <div class="row g-0">
+                    <div class="col-lg-8">
+                      <div class="p-5">
+                        {{#each user_cart}}
+                        <div class="row mb-4 d-flex justify-content-between align-items-center">
+                          <div class="col-md-2 col-lg-2 col-xl-2">
+                            <img
+                              src="/product_images/{{this.product._id}}.jpg"
+                              class="img-fluid rounded-3" alt="Cotton T-shirt">
+                          </div>
+                          <div class="col-md-3 col-lg-3 col-xl-3">
+                            <h6 class="text-muted">{{this.product.Category}}</h6>
+                            <h6 class="mb-0">{{this.product.Name}}</h6>
+                          </div>
+                          <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                            <button class="btn btn-outline-danger"
               onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user}}',-1)">-</button>
-            <span id="{{this.product._id}}"> {{this.quantity}}</span>
-            <button class="btn btn-outline-success"
-              onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user}}',1)">+</button>
-          </td>
-          <td><a href="/remove_product?cart_id={{this._id}}&&product_id={{this.product._id}}" class="btn btn-danger">Remove</a></td>
-        </tr>
-        {{/each}}
-      </tbody>
+      
+                                        <span id="{{this.product._id}}">{{this.quantity}}</span>
 
-    </table>
-    <div class="float-end pe-5">
-     <span id="total">Total Amount:₹{{total.total}}</span>
-     <br>    
-      <a href="/place_order" class="btn btn-success">Place Order</a>
-    </div>
-  </div>
+      
+                            <button class="btn btn-outline-success"
+              onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user}}',1)">+</button>
+
+                          </div>
+                          <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                            <h6 class="mb-0">₹ {{this.product.Price}}</h6>
+                          </div>
+                          <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                            <a href="/remove_product?cart_id={{this._id}}&&product_id={{this.product._id}}"  
+                            class="btn btn-danger">X</a>
+                          </div>
+                        </div>
+      
+                        <hr class="my-4">
+                        {{/each}}
+                        <div class="pt-5">
+                          <h6 class="mb-0"><a href="/" class="text-body"><i
+                                class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a></h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 bg-body-tertiary rounded">
+                      <div class="p-5">
+                        <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
+                        <hr class="my-4">
+      
+                        <div class="d-flex justify-content-between mb-4">
+                          <h5 class="text-uppercase">items </h5>
+                          <h5 id="total">₹ {{total.total}} </h5>
+                        </div>
+                        <!--
+                        <h5 class="text-uppercase mb-3">Shipping</h5>
+                        <div class="mb-4 pb-2">
+                          <select data-mdb-select-init>
+                            <option value="1">Standard-Delivery- €5.00</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                            <option value="4">Four</option>
+                          </select>
+                        </div> -->
+      
+                        <h5 class="text-uppercase mb-3">Give code</h5>
+      
+                        <div class="mb-5">
+                          <div data-mdb-input-init class="form-outline">
+                            <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
+                            <label class="form-label" for="form3Examplea2">Enter your code</label>
+                          </div>
+                        </div>
+      
+                        <hr class="my-4">
+      
+                        <div class="d-flex justify-content-between mb-5">
+                          <h5 class="text-uppercase">Total price</h5>
+                          <h5 id="total">₹ {{total.total}} </h5>
+                        </div>
+      
+                       
+                        <a href="/place_order" class="btn btn-success">Place Order</a>
+      
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+crossorigin="anonymous"></script>
 </section>
