redesigned product card

--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -56,9 +56,8 @@
                             <button class="btn btn-outline-danger"
               onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user}}',-1)">-</button>
       
-                                        <span id="{{this.product._id}}">{{this.quantity}}</span>
+                          <h5 id="{{this.product._id}}">{{this.quantity}}</h5>
 
-      
                             <button class="btn btn-outline-success"
               onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user}}',1)">+</button>
 
@@ -128,7 +127,4 @@
           </div>
         </div>
       </section>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-crossorigin="anonymous"></script>
 </section>
