--- a/views/users/test.hbs
+++ b/views/users/test.hbs
@@ -1,134 +1,52 @@
 <section>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-  function change_quantity(cart_id, product_id, user_id, count) {
-    let quantity = parseInt(document.getElementById(product_id).innerHTML);
-    count = parseInt(count);
-    user_id = new Object(user_id)
-
-    $.ajax({
-      url: '/change_product_quantity',
-      data: {
-        cart: cart_id,
-        user: user_id,
-        product: product_id,
-        count: count,
-        quantity: quantity
-      },
-      method: 'post',
-      success: (response) => {
-        if (response.product_removed) {
-          alert('Product removed from cart')
-          location.reload()
-          
-        }
-        else {
-          document.getElementById(product_id).innerHTML = quantity + count
-          document.getElementById('total').innerHTML = response.total
-          location.reload()//to reload the page automatically after changes
-        }
-      }
-    });
-  }
-
-</script>
-<section class="h-100 h-custom " style="background-color: white">
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12">
-              <div class="card card-registration card-registration-2 " style="border-radius 15px;">
-                <div class="card-body p-0">
-                  <div class="row g-0">
-                    <div class="col-lg-8">
-                      <div class="p-5">
-                        {{#each user_cart}}
-                        <div class="row mb-4 d-flex justify-content-between align-items-center">
-                          <div class="col-md-2 col-lg-2 col-xl-2">
-                            <img
-                              src="/product_images/{{this.product._id}}.jpg"
-                              class="img-fluid rounded-3" alt="Cotton T-shirt">
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-3">
-                            <h6 class="text-muted">{{this.product.Category}}</h6>
-                            <h6 class="mb-0">{{this.product.Name}}</h6>
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                            <button class="btn btn-outline-danger"
-              onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user}}',-1)">-</button>
-      
-                                        <span id="{{this.product._id}}">{{this.quantity}}</span>
-
-      
-                            <button class="btn btn-outline-success"
-              onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user}}',1)">+</button>
-
-                          </div>
-                          <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                            <h6 class="mb-0">₹ {{this.product.Price}}</h6>
-                          </div>
-                          <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                            <a href="/remove_product?cart_id={{this._id}}&&product_id={{this.product._id}}"  
-                            class="btn btn-danger">X</a>
-                          </div>
-                        </div>
-      
-                        <hr class="my-4">
-                        {{/each}}
-                        <div class="pt-5">
-                          <h6 class="mb-0"><a href="/" class="text-body"><i
-                                class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a></h6>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 bg-body-tertiary rounded">
-                      <div class="p-5">
-                        <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
-                        <hr class="my-4">
-      
-                        <div class="d-flex justify-content-between mb-4">
-                          <h5 class="text-uppercase">items </h5>
-                          <h5 id="total">₹ {{total.total}} </h5>
-                        </div>
-                        <!--
-                        <h5 class="text-uppercase mb-3">Shipping</h5>
-                        <div class="mb-4 pb-2">
-                          <select data-mdb-select-init>
-                            <option value="1">Standard-Delivery- €5.00</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                            <option value="4">Four</option>
-                          </select>
-                        </div> -->
-      
-                        <h5 class="text-uppercase mb-3">Give code</h5>
-      
-                        <div class="mb-5">
-                          <div data-mdb-input-init class="form-outline">
-                            <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
-                            <label class="form-label" for="form3Examplea2">Enter your code</label>
-                          </div>
-                        </div>
-      
-                        <hr class="my-4">
-      
-                        <div class="d-flex justify-content-between mb-5">
-                          <h5 class="text-uppercase">Total price</h5>
-                          <h5 id="total">₹ {{total.total}} </h5>
-                        </div>
-      
-                       
-                        <a href="/place_order" class="btn btn-success">Place Order</a>
-      
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+    <div class="container d-flex justify-content-center align-items-center">
+  {{#each products}}
+    <div class="card me-2">
+      <span class="percent">{{this.Discount}}</span>
+      <div class="card-image">
+        <img src="product_images/{{this._id}}.jpg" width="250" />
+      </div>
+      <div class="card-inner">
+        <span>{{this.Category}}</span>
+        <h5 class="mb-0">{{this.Name}}</h5>
+        <div class="price">
+          <span>₹{{this.Price}}</span>
+          <!--  offer price <sup>$20.99</sup> -->
+        </div>
+        <div class="mt-3 d-flex justify-content-between align-items-center">
+          <a href="/view_details"
+            class="btn btn-success text-uppercase btn-sm details"
+          >Details</a>
+          <div class="d-flex flex-row">
+           <!--  whishilist button
+           <span class="wishlist"><i class="fa fa-heart"></i></span> -->
+           <button class="cart" onclick="add_to_cart('{{this._id}}')"><i class="fa fa-shopping-cart"></i></button>
           </div>
         </div>
-      </section>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-crossorigin="anonymous"></script>
+      </div>
+    </div>
+  {{/each}}
+</div>
 </section>
+
+<script>
+    function add_to_cart(product_id){
+    $.ajax({
+        url:'/add_to_cart?id='+product_id,
+        method:'get',
+        success:(response)=>{
+            console.log('test 38',response)
+            if(response.stat){
+                let count=$('#cart_count').html()
+                count=parseInt(count)+1
+                $("#cart_count").html(count)
+            }
+            else{
+              location.href = "/login"
+
+            }
+        }
+
+    })  
+}
+</script>
