--- a/views/users/view_products.hbs
+++ b/views/users/view_products.hbs
@@ -1,25 +1,32 @@
 <section>
-    <div class="container mt-3">
-        <div class="row">
-            {{#each products}}
-            <div class="col-md-3 ">
-                <div class="card " style="width: 15rem; height: 26rem;">
-                    <a href="https://www.google.com/" target="_blank">
-                    <img src="/product_images/{{this._id}}.jpg" class="card-img-top" alt="...">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">{{this.Name}}</h5>
-                        <p class="card-text">₹{{this.Price}}</p>
-                       <!-- <p class="card-text">{{this.Description}}</p> -->
-                        {{!-- <a href="/add_to_cart?id={{this._id}}" class="btn btn-primary">Add to cart</a> --}}
-                        <button class="btn btn-primary" onclick="add_to_cart('{{this._id}}')">Add To Cart</button>
-                    </div>
-                </div>
-            </div>
-            {{/each}}
-
+    <div class="container d-flex justify-content-center align-items-center">
+  {{#each products}}
+    <div class="card me-2">
+      <span class="percent">{{this.Discount}}</span>
+      <div class="card-image">
+        <img src="product_images/{{this._id}}.jpg" width="250" />
+      </div>
+      <div class="card-inner">
+        <span>{{this.Category}}</span>
+        <h5 class="mb-0">{{this.Name}}</h5>
+        <div class="price">
+          <span>₹{{this.Price}}</span>
+          <!--  offer price <sup>$20.99</sup> -->
         </div>
+        <div class="mt-3 d-flex justify-content-between align-items-center">
+          <a href="/view_details"
+            class="btn btn-success text-uppercase btn-sm details"
+          >Details</a>
+          <div class="d-flex flex-row">
+           <!--  whishilist button
+           <span class="wishlist"><i class="fa fa-heart"></i></span> -->
+           <button class="cart" onclick="add_to_cart('{{this._id}}')"><i class="fa fa-shopping-cart"></i></button>
+          </div>
+        </div>
+      </div>
     </div>
+  {{/each}}
+</div>
 </section>
 
 <script>
@@ -29,9 +36,8 @@
         method:'get',
         success:(response)=>{
             if(response.stat){
-                let count=$('#cart_count').html()
-                count=parseInt(count)+1
-                $("#cart_count").html(count)
+              // if we reload the page the cart count will be updated automatically
+                location.reload()
             }
             else{
               location.href = "/login"
