--- a/views/users/product_details.hbs
+++ b/views/users/product_details.hbs
@@ -1,10 +1,10 @@
-<section>
+<section class="bg-body-tertiary rounded">
   <div class="container-fluid mt-5">
     <div class="row">
         <div class="col-md-5">
             <div class="carousel slide" data-ride="carousel" id="carousel-1">
                 <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active"><img class="img-thumbnail w-100 d-block" src="https://i.imgur.com/U46TQz6.jpg" alt="Slide Image" loading="lazy"></div>
+                    <div class="carousel-item active rounded-pill"><img class="img-thumbnail w-100 d-block" src="product_images/{{product._id}}.jpg" alt="Slide Image" loading="lazy"></div>
                     <div class="carousel-item"><img class="img-thumbnail w-100 d-block" src="https://i.imgur.com/YOWv57X.jpg" alt="Slide Image"></div>
                     <div class="carousel-item"><img class="img-thumbnail w-100 d-block" src="https://i.imgur.com/gLYZpMo.jpg" alt="Slide Image"></div>
                 </div>
@@ -16,9 +16,9 @@
                 </ol>
             </div>
         </div>
-        <div class="col-md-7">
-            <h4>Macbook air 8GB RAM/ 256GB SSD</h4>
-            <div class="price"><span class="mr-2"><i class="fa fa-rupee text-success"></i>&nbsp;59,999</span><span class="mr-2 cut">65,000</span><span class="text-success">25% OFF</span></div>
+        <div class="col-md-7 bg-body-tertiary rounded">
+            <h4>{{product.Name}}</h4>
+            <div class="price"><span class="mr-2"><i class="fa fa-rupee text-success"></i>&nbsp;{{product.Price}}</span><span class="mr-2 cut">65,000</span><span class="text-success">25% OFF</span></div>
             <div class="d-flex flex-row">
                 <div class="icons mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i></div><span>1200 ratings &amp; 564 reviews</span>
             </div>
@@ -30,8 +30,33 @@
             <hr>
             <div class="d-flex align-items-center mt-2"> <label class="radio"> <input type="radio" name="ram" value="128GB" checked> <span>128GB</span> </label> <label class="radio"> <input type="radio" name="ram" value="256GB"> <span>256GB</span> </label> <label class="radio"> <input type="radio" name="ram" value="256GB"> <span>512GB</span> </label> </div>
             <div><span class="font-weight-bold">Seller:</span><span class="ml-2">Sargam Electronics</span></div>
-            <div class="mt-3"><button class="btn btn-dark mr-2" type="button">ADD TO CART</button><button class="btn btn-success" type="button">BUY NOW</button></div>
+            <div class="mt-3">
+                <button onclick="add_to_cart('{{product._id}}')" class="btn btn-dark mr-2" type="button">ADD TO CART</button>
+                <button class="btn btn-success" type="button">BUY NOW</button>
+            </div>
         </div>
     </div>
 </div>
 </section>
+
+<script>
+    function add_to_cart(product_id){
+        console.log('product details',product_id)
+    $.ajax({
+        url:'/add_to_cart?id='+product_id,
+        method:'get',
+        success:(response)=>{
+            if(response.stat){
+              // if we reload the page the cart count will be updated automatically
+                location.reload()
+            }
+            else{
+              location.href = "/login"
+
+            }
+        }
+
+    })}
+
+    function place_order(product)
+</script>
