--- a/views/users/view_products.hbs
+++ b/views/users/view_products.hbs
@@ -3,8 +3,9 @@
   {{#each products}}
     <div class="card me-2">
       <span class="percent">{{this.Discount}}</span>
-      <div class="card-image">
-        <img src="product_images/{{this._id}}.jpg" width="250" />
+      <div class="card-image"> <a href="/product_details?product_id={{this._id}}">
+         <img src="product_images/{{this._id}}.jpg" width="250" />
+      </a>
       </div>
       <div class="card-inner">
         <span>{{this.Category}}</span>
@@ -14,8 +15,8 @@
           <!--  offer price <sup>$20.99</sup> -->
         </div>
         <div class="mt-3 d-flex justify-content-between align-items-center">
-          <a href="/view_details"
-            class="btn btn-success text-uppercase btn-sm details"
+          <a href="/product_details?product_id={{this._id}}"
+            class="btn btn-success text-uppercase btn-sm details fs-7 fw-bold"
           >Details</a>
           <div class="d-flex flex-row">
            <!--  whishilist button
