--- a/views/users/product_details.hbs
+++ b/views/users/product_details.hbs
@@ -31,8 +31,8 @@
             <div class="d-flex align-items-center mt-2"> <label class="radio"> <input type="radio" name="ram" value="128GB" checked> <span>128GB</span> </label> <label class="radio"> <input type="radio" name="ram" value="256GB"> <span>256GB</span> </label> <label class="radio"> <input type="radio" name="ram" value="256GB"> <span>512GB</span> </label> </div>
             <div><span class="font-weight-bold">Seller:</span><span class="ml-2">Sargam Electronics</span></div>
             <div class="mt-3">
-                <button onclick="add_to_cart('{{product._id}}')" class="btn btn-dark mr-2" type="button">ADD TO CART</button>
-                <button class="btn btn-success" type="button">BUY NOW</button>
+                <button onclick="add_to_cart('{{product._id}}')" class="btn btn-dark mr-2">ADD TO CART</button>
+                <a class="btn btn-success text-white" href="/place_order?is_single_product=true&&product_id={{product._id}}">BUY NOW</a>
             </div>
         </div>
     </div>
@@ -41,7 +41,6 @@
 
 <script>
     function add_to_cart(product_id){
-        console.log('product details',product_id)
     $.ajax({
         url:'/add_to_cart?id='+product_id,
         method:'get',
@@ -57,6 +56,4 @@
         }
 
     })}
-
-    function place_order(product)
 </script>
