--- a/views/users/orders.hbs
+++ b/views/users/orders.hbs
@@ -27,7 +27,7 @@
                             <td>{{this.payment_method}}</td>
                             <td> ₹{{this.total_amount}}</td>
                             <td>
-                                <a href="/view_ordered_products?id={{this._id}}" class="btn btn-primary">View
+                                <a href="/view_ordered_products?id={{this._id}}" class="btn btn-primary">View Ordered
                                     Products</a>
                             </td>
                         </tr>
