--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -2,7 +2,7 @@
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <img
       class="mx-auto h-10 w-auto"
-      src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+      src="images/website_icon.jpeg"
       alt="Your Company"
     />
     <h2
