designed_AI_and_contact_us_page

--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -38,7 +38,7 @@
             class="block text-sm font-medium leading-6 text-gray-900"
           >Password</label>
           <div class="text-sm">
-            <a
+            <a style="text-decoration: none;"
               href="#"
               class="font-semibold text-indigo-600 hover:text-indigo-500"
             >Forgot password?</a>
@@ -59,14 +59,14 @@
       <div>
         <button
           type="submit"
-          class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+          class="flex w-full justify-center rounded-md bg-gray-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-gray-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
         >Log in</button>
       </div>
     </form>
 
     <p class="mt-10 text-center text-sm text-gray-500">
       Not a user?
-      <a
+      <a style="text-decoration: none;"
         href="/signup"
         class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500"
       >Sign Up</a>
