--- a/views/partials/user_header.hbs
+++ b/views/partials/user_header.hbs
@@ -93,13 +93,18 @@
             </a>
           </li>
           <li class="shrink-0">
-            <a href="/orders" title="" style="text-decoration: none;"
+            <a href="/ai" title="" style="text-decoration: none;"
              class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500
              text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium text-xs rounded-lg text-center pl-1 pr-1">
               Ask Ai
             </a>
           </li>
           <li class="shrink-0">
+            <a href="/contact_us" title="" style="text-decoration: none;" class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
+              Contact Us
+            </a>
+          </li>
+           <li class="shrink-0">
             <a href="/test" title="" style="text-decoration: none;" class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
               test
             </a>
@@ -109,14 +114,12 @@
 
       <div class="flex items-center lg:space-x-2">
 
-        <button id="myCartDropdownButton1" data-dropdown-toggle="myCartDropdown1" type="button" class="inline-flex items-center rounded-lg justify-center p-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-sm font-medium leading-none text-gray-900 dark:text-white">
+        <a href="/cart"  style="text-decoration: none;" id="myCartDropdownButton1" data-dropdown-toggle="myCartDropdown1" type="button" class="inline-flex items-center rounded-lg justify-center p-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-sm font-medium leading-none text-gray-900 dark:text-white">
           <svg class="w-5 h-5 lg:me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"/>
           </svg> 
-          <a href="/cart" style="text-decoration: none;">My Cart</a>
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 9-7 7-7-7"/>
-          </svg>              
-        </button>
+          <p>My Cart</p>
+        </a>
         {{#if user}}
         <a href="/view_account" id="userDropdownButton1" data-dropdown-toggle="userDropdown1" type="button" 
          style="text-decoration: none;" class="inline-flex items-center rounded-lg justify-center p-2 hover:bg-gray-100 
@@ -135,41 +138,6 @@
            <p>Account</p> 
           {{/if}}          
           </a>
-        
-
-       <!-- <button id="userDropdownButton1" data-dropdown-toggle="userDropdown1" type="button" class="inline-flex items-center rounded-lg justify-center p-2 hover:bg-gray-100 
-        dark:hover:bg-gray-700 text-sm font-medium leading-none text-gray-900 dark:text-white">
-          <svg class="w-5 h-5 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-            <path stroke="currentColor" stroke-width="2" d="M7 17v1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3Zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
-          </svg>              
-          {{#if user}}
-          <p style="color: green;">{{user.Name}}</p>
-          {{else}}
-          Account
-          {{/if}}          
-        </button>
-        {{#if user}}
-        <div id="userDropdown1" class="hidden  z-10 w-56 divide-y divide-gray-100 overflow-hidden overflow-y-auto rounded-lg bg-white antialiased shadow dark:divide-gray-600 dark:bg-gray-700">
-          <ul class="p-2 text-start text-sm font-medium text-gray-900 dark:text-white">
-            <li><a href="/view_account" style="text-decoration: none;" title="" class="inline-flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-gray-100 dark:hover:bg-gray-600"> My Account </a></li>
-          </ul>
-      
-          <div class="p-2 text-sm font-medium text-gray-900 dark:text-white">
-            <a href="/logout" style="text-decoration: none; color:red" title="" class="inline-flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-gray-100 dark:hover:bg-gray-600"> Sign Out </a>
-          </div>
-        </div>
-        {{else}}
-        <div id="userDropdown1" class="hidden z-10 w-56 divide-y divide-gray-100 overflow-hidden overflow-y-auto rounded-lg bg-white antialiased shadow dark:divide-gray-600 dark:bg-gray-700">
-          <ul class="p-2 text-start text-sm font-medium text-gray-900 dark:text-white">
-            <li><a href="/login" style="text-decoration: none;" title="" class="inline-flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-gray-100 dark:hover:bg-gray-600"> Log In</a></li>
-          </ul>
-      
-          <div class="p-2 text-sm font-medium text-gray-900 dark:text-white">
-            <a href="/signup" style="text-decoration: none;" title="" class="inline-flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-gray-100 dark:hover:bg-gray-600"> Sign In </a>
-          </div>
-        </div>
-
-        {{/if}}-->
       </div>
     </div>
   </div>
