--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -84,20 +84,9 @@
                         <hr class="my-4">
       
                         <div class="d-flex justify-content-between mb-4">
-                          <h5 class="text-uppercase">items </h5>
+                          <h5 class="text-uppercase">Total </h5>
                           <h5 id="total">₹ {{total.total}} </h5>
                         </div>
-                        <!--
-                        <h5 class="text-uppercase mb-3">Shipping</h5>
-                        <div class="mb-4 pb-2">
-                          <select data-mdb-select-init>
-                            <option value="1">Standard-Delivery- €5.00</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                            <option value="4">Four</option>
-                          </select>
-                        </div> -->
-      
                         <h5 class="text-uppercase mb-3">Give code</h5>
       
                         <div class="mb-5">
